# pytes_bat_daemon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pytes.cfg  pytes.service  pytes.service.in
include/: libconfig_chained.h
include/bms/: SerialAdapter.h  Telemetry.h
include/rest/: Service.h
src/: CMakeLists.txt  Config.cpp  Config.h  OptionalValue.h  RestService.cpp  RestService.h  pytes.cpp
src/bms/: OptionalValue.h  SerialAdapter.cpp  Telemetry.cpp
src/rest/: Service.cpp
test/: CMakeLists.txt  test_aggregate.cpp  test_parse.cpp
